# fhirnexus-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISTRIBUTION.md  LICENSE  README.md  SETUP.md  TESTING.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/: GETTING_STARTED.md  LICENSE  package.sh
.claude/skills/codegen/fhir-custom-resource/: SKILL.md
.claude/skills/fhir-config-troubleshooting/: SKILL.md
.claude/skills/fhir-project-setup/: ARCHITECTURE.md  SKILL.md  mode-b-add-features.md
.claude/skills/fhir-project-setup/examples/: sample-configurations.md
.claude/skills/fhir-project-setup/templates/: setup-project.sh.md
.claude/skills/tasks/fhir-data-mapping/: SKILL.md
src/fhir_skills/: __init__.py  cli.py
src/fhir_skills/skills/: README.md  VERSION
src/fhir_skills/skills/codegen/: README.md
src/fhir_skills/skills/codegen/fhir-handler-generator/templates/: custom-operation.md
src/fhir_skills/skills/codegen/fhir-structuredefinition/: SKILL.md
src/fhir_skills/skills/fhir-custom-datastore/: SKILL.md
src/fhir_skills/skills/fhir-custom-resource/: data-types-reference.md
src/fhir_skills/skills/fhir-data-mapping/: mapping-patterns.md
src/fhir_skills/skills/fhir-errors-debugger/: SKILL.md
src/fhir_skills/skills/fhir-handler-generator/: SKILL.md  decision-matrix.md
src/fhir_skills/skills/fhir-handler-generator/templates/: crud-handler.md  workflow-handler.md
src/fhir_skills/skills/fhir-project-setup/examples/: add-features-examples.md
src/fhir_skills/skills/fhir-project-setup/templates/: add-features.sh.md
src/fhir_skills/skills/handler-patterns/: SKILL.md
tests/: README.md  __init__.py  conftest.py  test_installation.py  test_integration.py  test_skill_content.py
