[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-engine-skills"
version = "1.0.0"
description = "Claude Code skills for FHIR Engine development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FHIR Engine Team"}
]
keywords = ["fhir", "claude", "skills", "healthcare", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.scripts]
fhir-skills = "fhir_skills.cli:main"

[project.urls]
Homepage = "https://github.com/wei6bin/fhirnexus-skills"
Documentation = "https://github.com/wei6bin/fhirnexus-skills#readme"
Repository = "https://github.com/wei6bin/fhirnexus-skills"
"Issue Tracker" = "https://github.com/wei6bin/fhirnexus-skills/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_skills"]

[tool.hatch.build.targets.wheel.force-include]
"src/fhir_skills/skills" = "fhir_skills/skills"
